=======
Changes
=======

1.1.0 (unreleased)
==================

- Nothing changed yet.


1.0.0 (2016-08-02)
==================

- Claim support for Python 3.4 and 3.5.

- Drop support for Python 2.6.


1.0.0a1 (2013-02-23)
====================

- Added support for Python 3.3.

- Drastically reduce testing dependencies to make porting easier.

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.


0.8.0 (2013-10-04)
==================

- ``BasicSourceFactory`` now uses a class variable to tell what kind of
  source to make. (Same mechanism as it was added for
  ``ContextualSourceFactory`` in version 0.5.0).


0.7.0 (2010-09-17)
==================

- Using Python's ``doctest`` instead of deprecated
  ``zope.testing.doctest``.

- Using ``zope.keyreference`` as test dependency instead of
  ``zope.app.keyreference``.


0.6.0 (2009-08-15)
==================

- Change package homepage to PyPI instead of Subversion.

- Dropped Support for Zope 3.2 by removing a conditional import.

- Use hashlib for Python 2.5 and later to avoid deprecation warnings.


0.5.0 (2009-02-03)
==================

- FactoredContextualSourceBinder.__call__ now accepts arguments giving the
  args to pass to source class.  ContextualSourceFactory now uses a class
  variable to tell what kind of Source to make.

- Use zope.intid instead of zope.app.intid.

- Corrected e-mail address as zope3-dev@zope.org has been retired.


0.4.0 (2008-12-11)
==================

- Removed zope.app.form dependency. Changed ITerms import from
  zope.app.form.browser.interfaces to
  zope.browser.interfaces. [projekt01]


0.3.5 (2008-12-08)
==================

- Fixed bug in __new__ of contexual factories that would disallow
  subclasses to use constructors that expect a different
  signature. [icemac]


0.3.4 (2008-08-27)
==================

- Added all documents in package to long description, so they are